# ai-usage

./: .api-keys.env.example  .gitignore  AGENTS.html  AGENTS.md  AUDIT.html  AUDIT.md  PLAN.md  README.html  README.md  ai-usage  ai-usage-high-level-doc.html  aiwatch  architecture.html  data-architecture.html  get-data  pyproject.toml
docs/: EXECUTIVE_BRIEF.html  EXECUTIVE_BRIEF.md  README.html  README.md  TESTS.html  TESTS.md  USER_GUIDE.html  USER_GUIDE.md  architecture.html  architecture.md  data-architecture.html  data-architecture.md
docs/architecture/: README.html  README.md  c4-diagrams.html  c4-diagrams.md  workspace.dsl
docs/architecture/adr/: 0001-adopt-structurizr-c4-generated-artifacts.html  0001-adopt-structurizr-c4-generated-artifacts.md  0002-use-hermes-codex-credential-pool-for-multi-account-quotas.html  0002-use-hermes-codex-credential-pool-for-multi-account-quotas.md  0003-separate-google-entitlement-from-model-quota-availability.html  0003-separate-google-entitlement-from-model-quota-availability.md  0004-adopt-generated-high-level-docs-and-html-companions.html  README.html  README.md  (+1 more)
scripts/: render_docs.py  showcase.spec.json
src/ai_usage/: __init__.py  cli.py  config.py  db.py  fetcher.py  http.py  models.py  render.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_fixtures.py  test_http.py  test_models.py  test_render.py
tests/test_providers/: test_claude.py  test_codex.py  test_deepseek.py  test_exa.py  test_google.py  test_nous.py  test_openrouter.py  test_vastai.py  test_x.py  test_xai.py
(+33 files in other folders)
